<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.ListPreference
        android:defaultValue="0"
        android:entries="@array/service_mode_entries"
        android:entryValues="@array/service_mode_values"
        android:key="service_mode"
        android:title="@string/service_mode"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="use_accessibility"
        android:summary="@string/use_accessibility_service_desc"
        android:title="@string/use_accessibility_service"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="@bool/global_version"
        app:widgetLayout="@layout/layout_material_switch" />

    <androidx.preference.ListPreference
        android:defaultValue="1"
        android:entries="@array/scan_speed_entries"
        android:entryValues="@array/scan_speed_values"
        android:key="scan_speed"
        android:title="@string/scan_speed"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.ListPreference
        android:defaultValue="1"
        android:entries="@array/history_size_entries"
        android:entryValues="@array/history_size_values"
        android:key="history_size"
        android:title="@string/history_size"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.ListPreference
        android:defaultValue="1"
        android:entries="@array/window_size_entries"
        android:entryValues="@array/window_size_values"
        android:key="window_size"
        android:title="@string/window_size"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.Preference
        android:key="enable_autostart"
        android:summary="@string/enable_autostart_desc"
        android:title="@string/enable_autostart"
        app:iconSpaceReserved="false" />

    <androidx.preference.PreferenceCategory
        android:title="@string/group_miscellaneous"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_update"
            android:summary="@string/auto_update_desc_short"
            android:title="@string/auto_update_check"
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/layout_material_switch" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="system_font"
            android:summary="@string/use_system_font_desc"
            android:title="@string/use_system_font"
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/layout_material_switch" />

        <androidx.preference.Preference
            android:key="check_update"
            android:title="@string/check_for_update"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
