<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_github"
        android:title="@string/github"
        android:tooltipText="@string/github"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always"
        tools:targetApi="26" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        android:tooltipText="@string/menu"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always"
        tools:targetApi="26">

        <menu>
            <item
                android:id="@+id/check_update"
                android:icon="@drawable/ic_check_update"
                android:title="@string/check_for_update"
                app:iconTint="?attr/colorOnSurface" />

            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/auto_update"
                    android:icon="@drawable/ic_auto_update"
                    android:title="@string/auto_update"
                    app:iconTint="?attr/colorOnSurface" />

                <item
                    android:id="@+id/use_system_font"
                    android:icon="@drawable/ic_font"
                    android:title="@string/use_system_font"
                    app:iconTint="?attr/colorOnSurface" />
            </group>
        </menu>

    </item>

</menu>